Bug 599813 - nsSVGGlyphFrame::getCharacterData is expensive avoid calling it too many times. r+a=roc