layout/svg/base/src/nsISVGGlyphFragmentLeaf.h
@@ -70,18 +70,21 @@ public:
    * Returns inherited x and y values instead of parent element's attribute
    * values.
    */
-  NS_IMETHOD_(void) GetEffectiveXY(nsTArray<float> &aX, nsTArray<float> &aY)=0;
+  NS_IMETHOD_(void) GetEffectiveXY(PRInt32 strLength,
+                                   nsTArray<float> &aX, nsTArray<float> &aY)=0;
   /*
    * Returns inherited dx and dy values instead of parent element's attribute
    * values.
    */
-  NS_IMETHOD_(void) GetEffectiveDxDy(nsTArray<float> &aDx,
+  NS_IMETHOD_(void) GetEffectiveDxDy(PRInt32 strLength, 
+                                     nsTArray<float> &aDx,
                                      nsTArray<float> &aDy)=0;
   /*
    * Returns inherited rotate values instead of parent element's attribute
    * values.
    */
-  NS_IMETHOD_(void) GetEffectiveRotate(nsTArray<float> &aRotate)=0;
+  NS_IMETHOD_(void) GetEffectiveRotate(PRInt32 strLength,
+                                       nsTArray<float> &aRotate)=0;
   NS_IMETHOD_(PRUint16) GetTextAnchor()=0;
   NS_IMETHOD_(PRBool) IsAbsolutelyPositioned()=0;
 };
