layout/svg/base/src/nsSVGTextFrame.cpp
@@ -322,7 +322,8 @@ nsSVGTextFrame::UpdateGlyphPositioning(PRBool aForceGlobalTransform)
     nsSVGTextPathFrame *textPath = firstFragment->FindTextPathParent();
 
     nsTArray<float> effectiveXList, effectiveYList;
-    firstFragment->GetEffectiveXY(effectiveXList, effectiveYList);
+    firstFragment->GetEffectiveXY(firstFragment->GetNumberOfChars(),
+                                  effectiveXList, effectiveYList);
     if (!effectiveXList.IsEmpty()) ctp.x = effectiveXList[0];
     if (!textPath && !effectiveYList.IsEmpty()) ctp.y = effectiveYList[0];
 
